--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
                 }
               ],
               "styles": [
-                "src/styles.scss"
+                "src/styles.scss",
+                "./node_modules/leaflet/dist/leaflet.css"
               ],
               "scripts": []
             },
@@ -91,7 +92,10 @@
                 }
               ],
               "styles": [
-                "src/styles.scss"
+                "src/styles.scss",
+                "node_modules/bootstrap/scss/bootstrap.scss",
+                "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+                "./node_modules/leaflet/dist/leaflet.css"
               ],
               "scripts": []
             }
