data resolver added + minor fixes

--- a/client/package.json
+++ b/client/package.json
@@ -37,8 +37,10 @@
     "@angular/cli": "^18.2.0",
     "@angular/compiler-cli": "^18.2.0",
     "@ngneat/transloco-keys-manager": "^3.8.0",
+    "@ngx-env/builder": "^18.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.12",
+    "dotenv-webpack": "^8.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
