--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Client
 /client/dist
 /client/node_modules
+/client/.vscode
 /client/.angular
+/client/.env
+/client/public/assets/img
+# Server
+/server/node_modules
+/server/.env
