--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@ngneat/transloco": "^6.0.4",
+    "crypto-js": "^4.2.0",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -37,7 +38,8 @@
     "@angular/cli": "^18.2.0",
     "@angular/compiler-cli": "^18.2.0",
     "@ngneat/transloco-keys-manager": "^3.8.0",
-    "@ngx-env/builder": "^18.0.1",
+    "@ngx-env/builder": "^18.0.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.12",
     "dotenv-webpack": "^8.1.0",
