--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@ngneat/transloco": "^6.0.4",
+    "@jsverse/transloco": "^7.5.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "crypto-js": "^4.2.0",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
@@ -37,7 +39,6 @@
     "@angular-devkit/build-angular": "^18.2.0",
     "@angular/cli": "^18.2.0",
     "@angular/compiler-cli": "^18.2.0",
-    "@ngneat/transloco-keys-manager": "^3.8.0",
     "@ngx-env/builder": "^18.0.2",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
